# mazik

./: LICENSE  README.md  package.json
Core/: Cargo.toml
Core/src/: data.rs  gen_kana.rs  gen_table.rs  lib.rs  types.rs
Core/src/data/: consonants.rs  table_base.rs  vowels.rs
Core/src/gen_kana/: generate_hiragana.rs  generate_katakana.rs  generater_half_katakana.rs
Core/src/gen_table/: gen_azik_part.rs  gen_google_ime_table.rs
Core/src/gen_table/gen_azik_part/: gen_azik_google_ime.rs
Core/src/types/: config.rs  tokens.rs
Docments/: index.md
Docments/.vitepress/: config.mts
Front/: package.json  svelte.config.js  wrangler.jsonc
Front/src/: app.css  app.html  nord.css
Front/src/lib/wasm/: Core.d.ts  Core.js  Core_bg.wasm  Core_bg.wasm.d.ts  package.json
Front/src/routes/: +page.server.ts  +page.svelte  FormWasm.svelte
