[package]
name = "Core"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
serde_json = "1.0.140"
clap = { version = "4.5.35", features = ["derive"] }
regex = "1.11.1"
kanaria = "0.2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
